AutoPilot Release Notes


Version 1.1-000 vom 28.12.2023

 -Deutsch
    - Update Bootsrap Icons auf 1.11.2
    - Das AutoPilot Protokoll konnte nicht gelöscht bzw. geleert werden. Fehler wurde behoben. 
    - Änderungen in der Arbeits- und Funktionsweise von AutoPilot vorgenommen, welche die Systemsicherheit stark verbessern. Dies erfordert jedoch manuelle Anpassungen des Benutzers, da hierbei u.a. der Speicherort eines auszuführenden Shell-Scriptdatei neu definiert werden muss. 

 -English
    - Update Bootsrap Icons to 1.11.2
    - The AutoPilot log could not be deleted or emptied. Bug has been fixed.
    - Changes have been made to the way AutoPilot works and functions, which greatly improve system security. However, this requires manual adjustments by the user because, among other things, the storage location of a shell script file to be executed must be redefined.


Version 1.0-300 vom 24.09.2023

 -Deutsch
    - Update Bootstrap Framework auf 5.3.2
    - Update Bootstrap JavaScript auf 5.3.2
    - Update Bootsrap Icons auf 1.11.1
    - Wurde der Mountpoint eines externen Datenträgers nach dem Auswerfen nicht korrekt entfernt, hat AutoPilot diesen trotzdem noch angezeigt. Fehler wurde behoben.
    - Kleinere Fehlerkorrekturen vorgenommen. Danke an @luddinho aus dem GitHub Universum
    - Designänderungen und Detailverbesserungen vorgenommen.
 

 -English
    - Update Bootstrap Framework to 5.3.2
    - Update Bootstrap JavaScript to 5.3.2
    - Update Bootsrap Icons auf 1.11.1
    - If the mount point of an external disk was not removed correctly after ejecting, AutoPilot still displayed it. Bug has been fixed.
    - Minor bug fixes made. Thanks to @luddinho from the GitHub universe
    - Design changes and detail improvements made.


Version 1.0-200 vom 16.09.2023

 -Deutsch
    - Funktion zum Erweitern und Einschränken der App-Berechtigung hinzugefügt, damit u.a. Basic Backup Aufträge sowie Hyper Backup Aufgaben verarbeitet werden können.